# Computer-Vision-Assignments

./: .gitignore  README.md
HW1/: CMakeLists.txt  README.md  video_maker.cpp
HW2/: CMakeLists.txt  README.md  ellipse_fit.cpp
HW3/: CMakeLists.txt  README.md  test.cpp  train.cpp
HW3/prepare_image/: CMakeLists.txt  prepare_data.cpp  prepare_dataset.sh
HW4/: CMakeLists.txt  README.md  calibration_birdeye.cpp
HW4/examples/example1_results/: camera_params.txt
HW4/examples/example2_results/: camera_params.txt
HW5/: README.md  mnist_recognition.py  requirements.txt  run.sh
